SERVER-12516 Check for change in primary state when recovering from yield in CRUD operations.

Without this patch, a replicaset member running a long-running write operation
that yields might not notice, on yield recovery, that the node is no longer a
primary, and so no longer entitled to perform writes.